--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/messaging": "^6.3.4",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-config": "^0.12.0",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-google-sheet": "0.0.5",
     "react-native-reanimated": "^1.4.0",
