--- a/package.json
+++ b/package.json
@@ -10,16 +10,30 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/google-signin": "^3.0.3",
-    "@react-native-firebase/app": "^6.2.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^6.7.1",
+    "@react-native-firebase/auth": "^8.2.0",
+    "@react-native-firebase/firestore": "^7.4.3",
+    "@react-native-firebase/messaging": "^7.4.2",
+    "@react-navigation/native": "^5.6.1",
+    "appcenter": "3.1.0",
+    "appcenter-analytics": "3.1.0",
+    "appcenter-crashes": "3.1.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-gesture-handler": "^1.5.2",
+    "react-native-code-push": "^6.2.1",
+    "react-native-device-info": "^5.6.2",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-google-sheet": "0.0.5",
-    "react-native-reanimated": "^1.4.0",
-    "react-native-screens": "^2.0.0-alpha.22",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.7",
+    "react-native-screens": "^2.9.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^10.3.2",
     "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.5.0",
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
